--- a/on-hover.css
+++ b/on-hover.css
@@ -5,26 +5,27 @@
 	display: flex;
 	justify-content: space-around;
 	flex-wrap: wrap;
-	 
+	
 }
 
 .hover-item {
 	/*min-height: 100px;*/
 	margin: 20px;
 	box-shadow: 0px 0px 10px #eee;
-	
 }
-
 
 /* ___________ images ____________*/
 /*whole image*/
 .image {
 	position: relative;
-	/* width: 600px; */
-	max-width: 100%;
+	
+	/* to leave whitespace for the sidebars */
+	max-width: 90%;
 
 	margin-left: auto;
   	margin-right: auto;
+
+	
 
 	/* for the on hover y movement */
 	transition: 0.6s cubic-bezier(0.23, 1, 0.32, 1);
